# flutter-pi

./: .clang-format  .codechecker.json  .codechecker.skipfile  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  GETTING_STARTED.md  LICENSE  Makefile  README.md  cmake.yml  config.h.in  cross-pi3-toolchain.cmake  cross-pi4-64-toolchain.cmake  cross-pi4-toolchain.cmake  flutter-pi.c  flutter-pi_1.0.0_arm64.deb  main.c  methodchannel.c  methodchannel.h
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: analyze.yml  ci.yaml  cmake.yml  codeql-buildscript.sh  codeql.yml  fail_on_warning.py  no-response.yml  release.yml  static-analysis.yml
include/: aot.h  backing_store.h  backing_store_private.h  collection.h  compositor.h  compositor_ng.h  config.h  console_keyboard.h  cursor.h  dmabuf_surface.h  dylib_deps.h  dynarray.h  egl.h  egl_gbm_render_surface.h  egl_info.h  event_loop.h  filesystem_layout.h  flutter-pi.h  frame_scheduler.h  gbm_surface_backing_store.h  gl_renderer.h  gles.h  jsmn.h  keyboard.h  locales.h  macros.h  messenger.h  modesetting.h  notifier_listener.h  pixel_format.h  platform_view.h  platformchannel.h  pluginregistry.h  render_surface.h  render_surface_private.h  renderer.h  renderer_.h  surface.h  surface_private.h  texture_registry.h  (+10 more)
include/backing_stores/: allocator.h  allocator_private.h  store.h  store_private.h
include/modesetting/: modesetting.h  modesetting_fbdev.h  modesetting_kms.h  modesetting_private.h
include/plugins/: audioplayers.h  elm327plugin.h  gpiod.h  gstreamer_video_player.h  omxplayer_video_player.h  raw_keyboard.h  services.h  spidev.h  testplugin.h  text_input.h  video_player.h
include/plugins/android_auto/: android_auto.h
include/renderer/: renderer.h  renderer_gl.h  renderer_private.h  renderer_sw.h
src/: backing_store.c  collection.c  compositor.c  compositor.h  compositor_ng.c  compositor_ng.h  config.c  console_keyboard.c  crashpad_handler_trampoline.cc  cursor.c  cursor.h  dmabuf_surface.c  dmabuf_surface.h  dummy_render_surface.c  dummy_render_surface.h  dummy_window.c  dummy_window.h  dylib_deps.c  egl.h  egl_gbm_render_surface.c  egl_gbm_render_surface.h  egl_info.h  egl_offscreen_render_surface.c  egl_offscreen_render_surface.h  event_loop.c  event_loop.h  filesystem_layout.c  filesystem_layout.h  flutter-pi-formatted.c  flutter-pi.c  flutter-pi.h  flutter_embedder.h  frame_scheduler.c  frame_scheduler.h  gbm_surface_backing_store.c  gl_renderer.c  gl_renderer.h  gles.h  jsmn.h  keyboard.c  (+48 more)
src/backing_stores/: store.c
src/kms/: drmdev.c  drmdev.h  kms_window.c  kms_window.h  monitor.c  monitor.h  req_builder.c  req_builder.h  resources.c  resources.h
src/modesetting/: modesetting.c  modesetting_fbdev.c  modesetting_kms.c
src/plugins/: audioplayers.h  charset_converter.c  charset_converter.h  elm327plugin.c  elm327plugin.h  gpio-plugin.c  gpio-plugin.h  gpiod.c  gstplayer.c  gstplayer.h  gstreamer_video_player.h  multidisplay.c  omxplayer_video_player.c  printing.c  printing.h  raw_keyboard.c  raw_keyboard.h  services-plugin.c  services-plugin.h  services.c  services.h  spi-plugin.c  spi-plugin.h  spi_plugin.c  spi_plugin.h  spidev.c  testplugin.c  testplugin.h  text_input.c  text_input.h  video_player.c
src/plugins/android_auto/: aa_channel.c  aa_device.c  aa_xfer.c  android_auto.c
src/plugins/audioplayers/: README.md  player.c  plugin.c
src/plugins/camera/: camera.c  plugin.c
src/plugins/gstreamer_video_player/: flutter_texture_sink.c  frame.c  player.c  plugin.c
src/plugins/sentry/: sentry.c
src/renderer/: renderer.c  renderer_gl.c  renderer_sw.c
src/util/: asserts.h  bitscan.c  bitscan.h  bitset.h  collection.c  collection.h  dynarray.h  event_loop.c  event_loop.h  file_interface.h  geometry.h  khash.h  khash_uint32.h  kvec.h  list.h  lock_ops.c  lock_ops.h  logging.h  macros.h  refcounting.h  u_vector.c  u_vector.h  uuid.h  vector.c  vector.h
test/: CMakeLists.txt  flutterpi_test.c  platformchannel_test.c
tools/: roll_embedder_header.sh
